// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-fIiyQQ iijRRK"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-jpInJi hlDeXn"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gyKfoT iPDinH"
    >
      <div
        className="sc-jmQrGM rMKPF"
      />
    </span>
    <span
      className="sc-cRkqwB fIFTkv"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-fIiyQQ iijRRK"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-jpInJi hlDeXn"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gyKfoT iPDinH"
    >
      <div
        className="sc-jmQrGM rMKPF"
      />
    </span>
    <span
      className="sc-cRkqwB fIFTkv"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-fIiyQQ iijRRK"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-jpInJi hlDeXn"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gyKfoT iPDinH"
    >
      <div
        className="sc-jmQrGM rMKPF"
      />
    </span>
    <span
      className="sc-cRkqwB fIFTkv"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-fIiyQQ iijRRK"
>
  <input
    checked={true}
    className="sc-jpInJi hlDeXn"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-gyKfoT iPDinH"
  >
    <div
      className="sc-jmQrGM rMKPF"
    />
  </span>
  <span
    className="sc-cRkqwB fIFTkv"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-fIiyQQ iijRRK"
>
  <input
    className="sc-jpInJi hlDeXn"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-gyKfoT iPDinH"
  >
    <div
      className="sc-jmQrGM rMKPF"
    />
  </span>
  <span
    className="sc-cRkqwB fIFTkv"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-fIiyQQ iijRRK"
      htmlFor="button1"
    >
      <input
        className="sc-jpInJi hlDeXn"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gyKfoT iPDinH"
      >
        <div
          className="sc-jmQrGM rMKPF"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-fIiyQQ iijRRK"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-jpInJi hlDeXn"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gyKfoT iPDinH"
      >
        <div
          className="sc-jmQrGM rMKPF"
        />
      </span>
      <span
        className="sc-cRkqwB fIFTkv"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-fIiyQQ iijRRK"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-jpInJi hlDeXn"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gyKfoT iPDinH"
      >
        <div
          className="sc-jmQrGM rMKPF"
        />
      </span>
      <span
        className="sc-cRkqwB fIFTkv"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-fIiyQQ iijRRK"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-jpInJi hlDeXn"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gyKfoT iPDinH"
      >
        <div
          className="sc-jmQrGM rMKPF"
        />
      </span>
      <span
        className="sc-cRkqwB fIFTkv"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
